Fix mongo-server to version 4.4.8
Accordingly to [Mongo Production Notes](https://docs.mongodb.com/manual/administration/production-notes/#supported-platforms) mongo 5.0 release requires specific processors architectures to work in different platforms

--- a/express-mongo-docker/docker-compose.yaml
+++ b/express-mongo-docker/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   database:
     container_name: mongo-server
-    image: mongo
+    image: mongo:4.4.8
     restart: always
     environment: 
       - MONGO_INITDB_ROOT_USERNAME=admin
